--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server"
+    "start": "nodemon server"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,8 @@
     "mysql": "^2.17.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.6"
   }
 }
